fix: align 'edit example' icon

--- a/demos/mvc/content/shared/styles/examples.css
+++ b/demos/mvc/content/shared/styles/examples.css
@@ -2128,6 +2128,7 @@ a.footer-links:hover,
 
 .try-kendo .k-icon
 {
+    vertical-align: middle;
     margin-right: 5px;
     background-image: url('edit-icon.png');
     background-repeat: no-repeat;
